# project_dialogue

./: CMakeLists.txt  README.MD  README.md  ismen  main.c  main.cpp  text
Gleb/: READNE.MD
ThisPP/: CMakeLists.txt  main.c  main.cpp
ThisPP/biscuit/: CMakeLists.txt  want.c  want.cpp  want.h
gleb/: CMakeLists.txt  READNE.MD  main.cpp
gleb/lib_gleb/: CMakeLists.txt  input.c  input.h
my_lib_vlad/: input.c  input.h
valproh_text/: CMakeLists.txt  main.cpp  valproh_text
valproh_text/goodbye/: CMakeLists.txt  goodbye.cpp  goodbye.h
vladcookies/: CMakeLists.txt  main.c
vladcookies/my_lib_vlad/: CMakeLists.txt  input.cpp  input.h
